# KholorsStation

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  base-builder.Containerfile  vcpkg.json
.github/workflows/: build-image.yml  build_linux_image.yml  ci.yml  continuous_integration.yml  linux_ci.yml  release.yml  versionning.yaml  versionning.yml
cmake/modules/: FindFFTW3.cmake
res/: EULA.txt  KholorsStation.desktop  control  installer.nsi  linux_install.sh  linux_uninstall.sh
scripts/: generate_install_archive.sh
src/: CMakeLists.txt
src/AudioTransport/: AudioDataStore.cpp  AudioDataStore.h  AudioDataStoreTest.cpp  AudioDataStoreTest.h  AudioSegment.cpp  AudioSegment.h  AudioSegmentPayloadSender.h  AudioTransport.proto  AudioTransportData.h  AudioTransportTest.cpp  CMakeLists.txt  Client.cpp  Client.h  ColorBytes.h  ColorBytesTest.cpp  ColorBytesTest.h  Constants.h  DawInfo.cpp  DawInfo.h  MockedAudioSegmentPayloadSender.h  README.md  RpcServerImplementation.cpp  RpcServerImplementation.h  ServerStatusTask.h  SyncServer.cpp  SyncServer.h  SyncServerTest.cpp  SyncServerTest.h  TooManyRequestsException.h  TrackInfo.cpp  TrackInfo.h
src/GUIToolkit/: Consts.h  FontsLoader.cpp  FontsLoader.h  GUIData.h  GUIToolkit.cpp  GUIToolkit.h  IconsLoader.cpp  IconsLoader.h  KholorsLookAndFeel.cpp  KholorsLookAndFeel.h  README.md
src/GUIToolkit/Widgets/: ColorPicker.cpp  ColorPicker.h  ColorPickerUpdateTask.h  DialogConsts.h  LabeledLineContainer.cpp  LabeledLineContainer.h  LabeledLineStack.cpp  LabeledLineStack.h  LabeledLineText.h  ServerPortText.cpp  ServerPortText.h  ServerStatusText.cpp  ServerStatusText.h  TextEntry.cpp  TextEntry.h
src/HeadlessAudioBroadcast/: AbstractFftProcessor.h  AudioEventFetcher.h  AudioSegment.cpp  AudioSegment.h  AudioSegmentPayloadSender.h  AudioTransportData.h  BpmUpdateTask.h  CMakeLists.txt  Client.cpp  Client.h  ColorBytes.h  Constants.h  DawInfo.cpp  DawInfo.h  FftProcessor.cpp  FftProcessor.h  FftResultVectorReuseTask.h  HeadlessAudioBroadcast.proto  NewFftDataTask.h  README.md  ServerFftsRingBuffer.cpp  ServerFftsRingBuffer.h  ServerRunner.cpp  ServerRunner.h  ServerService.h  TimeSignatureUpdateTask.h  TrackInfo.cpp  TrackInfo.h  TrackInfoUpdateTask.h
src/SinkPlugin/: AudioBlockInfo.h  BufferCoalescer.h  BufferForwarder.cpp  BufferForwarder.h  BufferForwarderTest.cpp  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
src/StationApp/: CMakeLists.txt  CheckUpdates.cpp  CheckUpdates.h  Main.cpp  MainComponent.cpp  MainComponent.h  README.md
src/StationApp/Audio/: AudioDataWorker.cpp  AudioDataWorker.h  BpmUpdateTask.h  BrokenLicenseCheckTask.h  FftResultVectorReuseTask.h  FftRunner.cpp  FftRunner.h  NewFftDataTask.h  ProcessingTimer.cpp  ProcessingTimer.h  ProcessingTimerWaitgroup.cpp  SimpleLicenseCheckTask.h  TimeSignatureUpdateTask.h  TrackInfoStore.h  TrackInfoUpdateTask.h  VolumeSensitivityTask.h
src/StationApp/GUI/: BottomInfoLine.cpp  BottomInfoLine.h  BottomPanel.cpp  BottomPanel.h  ClearButton.cpp  ClearTask.h  CpuImageDrawingBackend.cpp  CpuImageDrawingBackend.h  EmptyTab.h  FftDrawingBackend.h  FreqTimeView.cpp  FreqTimeView.h  FrequencyLinesDrawer.h  FrequencyScale.cpp  FrequencyScale.h  GpuTextureDrawingBackend.cpp  GpuTextureDrawingBackend.h  HelpButton.cpp  HelpButton.h  HelpDialogContent.cpp  HelpDialogContent.h  LicenseDialog.cpp  LicenseDialog.h  NormalizedUnitTransformer.h  SensitivitySlider.cpp  SensitivitySlider.h  ServerTab.cpp  ServerTab.h  TimeScale.cpp  TimeScale.h  TopMenuModel.cpp  TopMenuModel.h  TrackList.cpp  TrackList.h  TrackSelectionTask.h
src/StationApp/Licensing/: Base58.cpp  Base58.h  CryptoTest.cpp  DummyLicenseManager.cpp  DummyLicenseManager.h  ExecCmd.cpp  ExecCmd.h
src/StationApp/Maths/: NormalizedBijectiveProjection.h
src/StationApp/OpenGL/: BeatGridMesh.cpp  BeatGridMesh.h  GLInfoLogger.h  GlMesh.h  OpenGlShaders.h  RadialGradientRectangle.cpp  RadialGradientRectangle.h  SolidRectangle.cpp  SolidRectangle.h  TexturedRectangle.cpp  TexturedRectangle.h  Vertex.h
src/StationPlugin/: AudioBlockInfo.h  BufferForwarder.cpp  BufferForwarder.h  CMakeLists.txt  LockFreeFIFO.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/StationPlugin/Audio/: AudioDataWorker.cpp  AudioDataWorker.h  ProcessingTimer.cpp  ProcessingTimer.h  ProcessingTimerWaitgroup.cpp  ProcessingTimerWaitgroup.h  TrackColorUpdateTask.h  TrackInfoStore.h
src/StationPlugin/GUI/: BottomInfoLine.cpp  BottomInfoLine.h  ClearButton.cpp  ClearButton.h  CpuImageDrawingBackend.cpp  CpuImageDrawingBackend.h  FftDrawingBackend.h  FreqTimeView.cpp  FreqTimeView.h  FrequencyLinesDrawer.h  FrequencyScale.cpp  FrequencyScale.h  GpuTextureDrawingBackend.cpp  GpuTextureDrawingBackend.h  LicenseDialog.cpp  MouseCursorInfoTask.h  SensitivitySlider.cpp  ServerTab.cpp  TimeScale.cpp  TopMenuModel.cpp  TrackList.cpp  TrackList.h
src/StationPlugin/OpenGL/: BeatGridMesh.cpp  BeatGridMesh.h  RadialGradientRectangle.cpp  RadialGradientRectangle.h  SolidRectangle.cpp  SolidRectangle.h  TexturedRectangle.cpp  TexturedRectangle.h
src/TaskManagement/: CMakeLists.txt  Marshalable.h  README.md  Task.cpp  Task.h  TaskListener.h  TaskingManager.cpp  TaskingManager.h  TaskingManagerTest.cpp
src/Utils/: CMakeLists.txt  NoAllocIndexQueue.h  UtilsTest.cpp  WaitGroup.h
